[package]
name = "GhostLayer"
version = "0.2.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
winreg = "0.10"
windows = { version = "0.61.1", features = ["Win32_System_Registry", "Win32_System_Services"] }
winapi = { version = "0.3.9", features = ["consoleapi", "winnls", "wincon"] }
